--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Halal Bazar Biryani Cost Calculator"
+      content="myhalalbazar.de - Authentischer Marktplatz für Halal Speisen & Produkte - Enterprise Resource Planning System"
     />
-    <title>Halal Bazar - Biryani Cost Calculator</title>
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <title>myhalalbazar.de - ERP System | Halal Speisen & Produkte für Deutschland</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
